--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
+//Modify the user name and password according to your MongoDB account
+
 NODE_ENV = development
 PORT = 5000
-MONGO_URI = mongodb+srv://admin_user:adminUser1234@firstcluster.nls8d.mongodb.net/backend_app?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://<user_name>:<password>@firstcluster.nls8d.mongodb.net/backend_app?retryWrites=true&w=majority
 JWT_SECRET = abcd123
